修改首页样式

--- a/src/styles/testHome.scss
+++ b/src/styles/testHome.scss
@@ -22,7 +22,7 @@ body,
 }
 
 .el-main {
-  background-color: #E9EEF3;
+  // background-color: #E9EEF3;
   color: #333;
   text-align: center;
   // line-height: 160px;
