修改了orgLogin页面,添加了部分模块功能，修改了org.scss

--- a/src/styles/org.scss
+++ b/src/styles/org.scss
@@ -3,7 +3,13 @@
   }
 
 
-.el-header,
+.el-header{
+  background-color: #b3c0d1;
+  color: #333;
+  text-align: center;
+  line-height: 60px;
+}
+
 .el-footer {
   background-color: #b3c0d1;
   color: #333;
@@ -12,14 +18,14 @@
 }
 
 .el-aside {
-  background-color: #d3dce6;
+  // background-color: #d3dce6;
   color: #333;
   text-align: center;
   line-height: 200px;
 }
 
 .el-main {
-  background-color: #e9eef3;
+  // background-color: #e9eef3;
   color: #333;
   text-align: center;
   line-height: 160px;
